[package]
name = "modalities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "modalities"
crate-type = ["cdylib"]

[dependencies]
bitflags = "2.10.0"
pyo3 = {version = "0.27.1", features = ["extension-module"], optional = true}

[features]
python = ["pyo3"]

